// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="overview-quality-gate-conditions"
>
  <div
    className="big-padded bordered-bottom overview-quality-gate-conditions-list"
  >
    <CleanAsYouCodeWarning
      component={
        {
          "breadcrumbs": [],
          "key": "my-project",
          "name": "MyProject",
          "qualifier": "TRK",
          "qualityGate": {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          },
          "qualityProfiles": [
            {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ],
          "tags": [],
        }
      }
    />
  </div>
  <h4
    className="big-padded overview-quality-gate-conditions-section-title"
  >
    quality_gates.conditions.new_code_x.1
  </h4>
  <Memo(QualityGateConditions)
    component={
      {
        "caycStatus": "non-compliant",
        "failedConditions": [
          {
            "actual": "10",
            "error": "0",
            "level": "ERROR",
            "measure": {
              "bestValue": true,
              "leak": "1",
              "metric": {
                "id": "coverage",
                "key": "coverage",
                "name": "coverage",
                "type": "PERCENT",
              },
              "period": {
                "bestValue": true,
                "index": 1,
                "value": "1.0",
              },
              "value": "1.0",
            },
            "metric": "bugs",
            "op": "GT",
          },
          {
            "actual": "10",
            "error": "0",
            "level": "ERROR",
            "measure": {
              "bestValue": true,
              "leak": "1",
              "metric": {
                "id": "coverage",
                "key": "coverage",
                "name": "coverage",
                "type": "PERCENT",
              },
              "period": {
                "bestValue": true,
                "index": 1,
                "value": "1.0",
              },
              "value": "1.0",
            },
            "metric": "new_bugs",
            "op": "GT",
          },
        ],
        "ignoredConditions": false,
        "key": "foo",
        "name": "Foo",
        "status": "ERROR",
      }
    }
    failedConditions={
      [
        {
          "actual": "10",
          "error": "0",
          "level": "ERROR",
          "measure": {
            "bestValue": true,
            "leak": "1",
            "metric": {
              "id": "coverage",
              "key": "coverage",
              "name": "coverage",
              "type": "PERCENT",
            },
            "period": {
              "bestValue": true,
              "index": 1,
              "value": "1.0",
            },
            "value": "1.0",
          },
          "metric": "new_bugs",
          "op": "GT",
        },
      ]
    }
  />
  <h4
    className="big-padded overview-quality-gate-conditions-section-title"
  >
    quality_gates.conditions.overall_code_x.1
  </h4>
  <Memo(QualityGateConditions)
    component={
      {
        "caycStatus": "non-compliant",
        "failedConditions": [
          {
            "actual": "10",
            "error": "0",
            "level": "ERROR",
            "measure": {
              "bestValue": true,
              "leak": "1",
              "metric": {
                "id": "coverage",
                "key": "coverage",
                "name": "coverage",
                "type": "PERCENT",
              },
              "period": {
                "bestValue": true,
                "index": 1,
                "value": "1.0",
              },
              "value": "1.0",
            },
            "metric": "bugs",
            "op": "GT",
          },
          {
            "actual": "10",
            "error": "0",
            "level": "ERROR",
            "measure": {
              "bestValue": true,
              "leak": "1",
              "metric": {
                "id": "coverage",
                "key": "coverage",
                "name": "coverage",
                "type": "PERCENT",
              },
              "period": {
                "bestValue": true,
                "index": 1,
                "value": "1.0",
              },
              "value": "1.0",
            },
            "metric": "new_bugs",
            "op": "GT",
          },
        ],
        "ignoredConditions": false,
        "key": "foo",
        "name": "Foo",
        "status": "ERROR",
      }
    }
    failedConditions={
      [
        {
          "actual": "10",
          "error": "0",
          "level": "ERROR",
          "measure": {
            "bestValue": true,
            "leak": "1",
            "metric": {
              "id": "coverage",
              "key": "coverage",
              "name": "coverage",
              "type": "PERCENT",
            },
            "period": {
              "bestValue": true,
              "index": 1,
              "value": "1.0",
            },
            "value": "1.0",
          },
          "metric": "bugs",
          "op": "GT",
        },
      ]
    }
  />
</div>
`;

exports[`should render correctly 2`] = `
<div
  className="overview-quality-gate-conditions"
>
  <ButtonPlain
    aria-expanded={true}
    aria-label="overview.quality_gate.hide_project_conditions_x.Foo"
    className="width-100 text-left"
    onClick={[Function]}
  >
    <div
      className="display-flex-center"
    >
      <h3
        className="overview-quality-gate-conditions-project-name text-ellipsis"
        title="Foo"
      >
        <ChevronDownIcon />
        <span
          className="spacer-left"
        >
          Foo
        </span>
      </h3>
    </div>
  </ButtonPlain>
  <h4
    className="big-padded overview-quality-gate-conditions-section-title"
  >
    quality_gates.conditions.new_code_x.1
  </h4>
  <Memo(QualityGateConditions)
    component={
      {
        "caycStatus": "non-compliant",
        "failedConditions": [
          {
            "actual": "10",
            "error": "0",
            "level": "ERROR",
            "measure": {
              "bestValue": true,
              "leak": "1",
              "metric": {
                "id": "coverage",
                "key": "coverage",
                "name": "coverage",
                "type": "PERCENT",
              },
              "period": {
                "bestValue": true,
                "index": 1,
                "value": "1.0",
              },
              "value": "1.0",
            },
            "metric": "bugs",
            "op": "GT",
          },
          {
            "actual": "10",
            "error": "0",
            "level": "ERROR",
            "measure": {
              "bestValue": true,
              "leak": "1",
              "metric": {
                "id": "coverage",
                "key": "coverage",
                "name": "coverage",
                "type": "PERCENT",
              },
              "period": {
                "bestValue": true,
                "index": 1,
                "value": "1.0",
              },
              "value": "1.0",
            },
            "metric": "new_bugs",
            "op": "GT",
          },
        ],
        "ignoredConditions": false,
        "key": "foo",
        "name": "Foo",
        "status": "ERROR",
      }
    }
    failedConditions={
      [
        {
          "actual": "10",
          "error": "0",
          "level": "ERROR",
          "measure": {
            "bestValue": true,
            "leak": "1",
            "metric": {
              "id": "coverage",
              "key": "coverage",
              "name": "coverage",
              "type": "PERCENT",
            },
            "period": {
              "bestValue": true,
              "index": 1,
              "value": "1.0",
            },
            "value": "1.0",
          },
          "metric": "new_bugs",
          "op": "GT",
        },
      ]
    }
  />
  <h4
    className="big-padded overview-quality-gate-conditions-section-title"
  >
    quality_gates.conditions.overall_code_x.1
  </h4>
  <Memo(QualityGateConditions)
    component={
      {
        "caycStatus": "non-compliant",
        "failedConditions": [
          {
            "actual": "10",
            "error": "0",
            "level": "ERROR",
            "measure": {
              "bestValue": true,
              "leak": "1",
              "metric": {
                "id": "coverage",
                "key": "coverage",
                "name": "coverage",
                "type": "PERCENT",
              },
              "period": {
                "bestValue": true,
                "index": 1,
                "value": "1.0",
              },
              "value": "1.0",
            },
            "metric": "bugs",
            "op": "GT",
          },
          {
            "actual": "10",
            "error": "0",
            "level": "ERROR",
            "measure": {
              "bestValue": true,
              "leak": "1",
              "metric": {
                "id": "coverage",
                "key": "coverage",
                "name": "coverage",
                "type": "PERCENT",
              },
              "period": {
                "bestValue": true,
                "index": 1,
                "value": "1.0",
              },
              "value": "1.0",
            },
            "metric": "new_bugs",
            "op": "GT",
          },
        ],
        "ignoredConditions": false,
        "key": "foo",
        "name": "Foo",
        "status": "ERROR",
      }
    }
    failedConditions={
      [
        {
          "actual": "10",
          "error": "0",
          "level": "ERROR",
          "measure": {
            "bestValue": true,
            "leak": "1",
            "metric": {
              "id": "coverage",
              "key": "coverage",
              "name": "coverage",
              "type": "PERCENT",
            },
            "period": {
              "bestValue": true,
              "index": 1,
              "value": "1.0",
            },
            "value": "1.0",
          },
          "metric": "bugs",
          "op": "GT",
        },
      ]
    }
  />
</div>
`;
